--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
 {% block title %}Flasky{% endblock %}
@@ -10,7 +9,18 @@
 </div>
 
 <div>
-    {{ wtf.quick_form(post_form,role="form") }}
+<form method="POST">
+{{ post_form.hidden_tag() }}
+{{ post_form.title.label }}<br>
+{{ post_form.title() }} <br>
+{{ post_form.summary.label }}<br>
+{{ post_form.summary() }} <br>
+{{ post_form.body.label }}<br>
+{{ post_form.body() }} <br>
+{{ post_form.submit() }}<br>
+{{ post_form.cancel() }} <br>
+
+</form>
 
 </div>
 
