--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
+
+{% block head %}
+{{ super() }}
+{% endblock %}
 
 {% block title %}Flasky{% endblock %}
 
@@ -8,7 +11,7 @@
 
 <div class="post-tabs">
 
-    <div  class="pull-right" style="width:180px">
+    <div  class="float-right" style="width:180px">
         <h3 class="uk-panel-title">实用链接</h3>
         <ul class="uk-list uk-list-line" style="font-size:18px">
             <li> <a target="_blank" href="http://www.liaoxuefeng.com/wiki/0014316089557264a6b348958f449949df42a6d3a2e542c000">Python教程</a></li>
