--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -1,5 +1,5 @@
 {% macro pagination_widget(pagination, endpoint, fragment='') %}
-<ul class="pagination">
+<div class="pagination">
     <li{% if not pagination.has_prev %} class="disabled"{% endif %}>
         <a href="{% if pagination.has_prev %}{{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}{{ fragment }}{% else %}#{% endif %}">
             &laquo;
@@ -25,5 +25,5 @@
             &raquo;
         </a>
     </li>
-</ul>
+</div>
 {% endmacro %}
