--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,34 +16,43 @@
 
     <body>
     {% block navbar %}
-    <header class="header">
-
-        <nav class="nav">
-            <!-- <p>{{current_user.is_anonymous }}</p> -->
-            <a href="{{ url_for('main.index') }}"><b>Home</b></a>
-
-            {% if current_user.is_authenticated %}
-            <a href="{{ url_for('main.create', username=current_user.username) }}">Create</a>
-            {% endif %}
-
-            <div class="dropdown ">
+    <div class="header">
+        <div class="header-wrap">
+            <div class="header-nav">
+                <!-- <p>{{current_user.is_anonymous }}</p> -->
+                <li class="header-nav-li ">
+                    <a class="header-nav-link " href="{{ url_for('main.index') }}"><b>Home</b></a>
+                </li>
+                <li class="header-nav-li ">
+                    {% if current_user.is_authenticated %}
+                    <a class="header-nav-link " href="{{ url_for('main.create', username=current_user.username) }}">Create</a>
+                    {% endif %}
+                </li>
+            </div>
+            <div class="header-profile">
                 {% if current_user.is_authenticated %}
-                <a href="#">
+                <a class="header-profile-userinfo" href="#">
                     {{ current_user.username }}
                 </a>
-                <div class="dropdown-content">
-                    <a href="{{ url_for('main.logout') }}">Log Out</a>
+
+                <div class="header-dropdown">
+                    <li>
+                    <a href="{{ url_for('main.logout') }}">
+                        Log Out
+                    </a>
+                    <li>
                 </div>
                 {% else %}
-                <a href="{{ url_for('main.login') }}">Log In</a>
+                <a class="header-profile-userinfo" href="{{ url_for('main.login') }}">Log In</a>
                 {% endif %}
             </div>
-        </nav>
-    </header>
+
+        </div>
+    </div>
     {% endblock %}
 
     {% block content %}
-    <div class="container">
+    <div class="container container-wrap ">
         {% for message in get_flashed_messages() %}
         <div class="alert alert-warning">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -56,15 +65,12 @@
     {% endblock %}
 
     {% block scripts %}
-
     {{ moment.include_moment() }}
     <script>
-    function cutLine(str)
-    {
-    return str.substr(0, 10);
-    }
-
-
+        function cutLine(str)
+        {
+        return str.substr(0, 10);
+        }
     </script>
     {% endblock %}
 
