--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,29 +7,59 @@
 
 {% block title %}Flasky{% endblock %}
 
+{% block navbar %}
+{{ super() }}
+{% endblock %}
+
+{% block content %}
+{{ super() }}
+{% endblock %}
+
 {% block page_content %}
 
-<div class="post-tabs">
+<div>
 
-    <div  class="float-right" style="width:180px">
-        <h3 class="uk-panel-title">实用链接</h3>
-        <ul class="uk-list uk-list-line" style="font-size:18px">
-            <li> <a target="_blank" href="http://www.liaoxuefeng.com/wiki/0014316089557264a6b348958f449949df42a6d3a2e542c000">Python教程</a></li>
-            <li> <a target="_blank" href="http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000">Git教程</a></li>
-            <li> <a target="_blank" href="https://github.com/penglee87">My Git</a></li>
-            <li> <a target="_blank" href="{{ url_for('.blog', id=1) }}">关于本站</a></li>
-        </ul>
+    <div class="container-side-nav">
+        <h3>实用链接</h3>
+        <div class="container-side-nav-link">
+            <li><a target="_blank"
+                   href="http://www.liaoxuefeng.com/wiki/0014316089557264a6b348958f449949df42a6d3a2e542c000">Python教程</a>
+            </li>
+            <li><a target="_blank"
+                   href="http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000">Git教程</a>
+            </li>
+            <li><a target="_blank" href="https://github.com/penglee87">My Git</a></li>
+            <li><a target="_blank" href="{{ url_for('.blog', id=1) }}">关于本站</a></li>
+        </div>
     </div>
 
-    {% include '_posts.html' %}
+    <ul>
+        {% for post in posts %}
+
+        <div>
+            <h3><a href="{{ url_for('.blog', id=post.id) }}">{{ post.title }}</a></h3>
+            <div class="post-date">{{ post.timestamp }}</div>
+            <p>{{ post.summary }}</p>
+
+            <br>
+            <div style="width:80%;border-bottom:1px solid #D0D0D0;height:0px;"></div>
+            <!--<hr style="width:80%;" />-->
+        </div>
+
+        {% endfor %}
+    </ul>
+
+    <ul>
+        {% if pagination %}
+        <div>
+            {{ macros.pagination_widget(pagination, '.index') }}
+        </div>
+        {% endif %}
+    </ul>
 
 </div>
 
-{% if pagination %}
-<div class="pagination">
-    {{ macros.pagination_widget(pagination, '.index') }}
-</div>
-{% endif %}
+
 
 
 {% endblock %}
