--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
     <ul>
         {% for post in posts %}
 
-        <div>
+        <div class="container-blog">
             <h3><a href="{{ url_for('.blog', id=post.id) }}">{{ post.title }}</a></h3>
             <div class="post-date">{{ post.timestamp }}</div>
             <p>{{ post.summary }}</p>
