--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,7 +40,10 @@
                     <a href="{{ url_for('main.logout') }}">
                         Log Out
                     </a>
-                    <li>
+                    <a href="{{ url_for('main.change_password') }}">
+                        Change Password
+                    </a>
+                    </li>
                 </div>
                 {% else %}
                 <a class="header-profile-userinfo" href="{{ url_for('main.login') }}">Log In</a>
